# attestation

./: pyproject.toml
attestation/: asgi.py  settings.py  urls.py  wsgi.py
electronics_shop/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
electronics_shop/migrations/: 0001_initial.py  0002_alter_factory_provider_debt_and_more.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
